[build-system]
requires = ["setuptools==61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "randmac"
description = ""
readme = "README.md"
authors = [{ name = "Josh Schmelzle", email = "josh@joshschmelzle.com"}]
license = { file = "LICENSE" }
classifiers = [
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.2",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
]
keywords = ["randmac", "random mac", "random mac address"]

[project.scripts]
randmac = "randmac=randmac.__main__:main"

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev = ["black", "bumpver", "isort", "mypy", "pytest"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"randmac/__version__.py" = [
    '__version__ = "{version}"'
]